Bug 132766 - FILESAVE DOCX Bulleting symbol changes after RT
Summary: FILESAVE DOCX Bulleting symbol changes after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.0.0 target:6.4.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2020-05-06 12:53 UTC by NISZ LibreOffice Team
Modified: 2020-08-21 22:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from Writer (8.64 KB, application/vnd.oasis.opendocument.text)
2020-05-06 12:53 UTC, NISZ LibreOffice Team
Details
The example file saved as docx in Writer then roundtripped in Word (12.68 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-05-06 12:54 UTC, NISZ LibreOffice Team
Details
The Word-saved file saved by Writer master (9.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-05-06 12:54 UTC, NISZ LibreOffice Team
Details
Screenshot of the example file in Word and Writer after another save & reload (45.58 KB, image/png)
2020-05-06 12:55 UTC, NISZ LibreOffice Team
Details
The Word-saved file again saved by the fixed Writer master (130.54 KB, image/png)
2020-05-13 07:03 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-05-06 12:53:31 UTC
Created attachment 160437 [details]
Example file from Writer

Attached document was created  in Writer master, saved as docx, re-saved in Word. 
After the Word-saved file is saved again in Writer, the bulleting symbol changes to a clock.

Steps to reproduce:
    1. Create a numbered list in Writer, save as docx
    2. Open the file in Word, save it again.
    3. Open the roundtripped file in Writer and save it as docx again

Actual results:
The bulleting symbol changes from dot to a clock.

Expected results:
Symbol remains bullet.

LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: d8a52f21ce23a37f7d1137501...
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

But not in bibisect-win64-6.5 version from ~2 weeks ago:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: a40455528c4ec2c079444f320a02d1946e1d8ac9
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-05-06 12:54:22 UTC Comment hidden (obsolete)
Comment 2 NISZ LibreOffice Team 2020-05-06 12:54:45 UTC
Created attachment 160439 [details]
The Word-saved file saved by Writer master
Comment 3 NISZ LibreOffice Team 2020-05-06 12:55:14 UTC
Created attachment 160440 [details]
Screenshot of the example file in Word and Writer after another save & reload
Comment 4 NISZ LibreOffice Team 2020-05-06 12:58:03 UTC
(In reply to NISZ LibreOffice Team from comment #1)
> Created attachment 160438 [details]
> The example file saved as docx in Writer then roundtripped in Word

To be clear: saving this in Writer and reloading should trigger the bug.
Comment 5 Timur 2020-05-08 12:03:33 UTC
Repro 7.0+ with attachment 158661 [details] that after reloading saved DOCX looks like attachment 160530 [details] (right bottom).
Comment 6 Timur 2020-05-08 12:34:10 UTC
 290aa630be3962fa06811ad5a4c5532122e33573 is the first bad commit
commit 290aa630be3962fa06811ad5a4c5532122e33573
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Apr 27 22:42:10 2020 +0200

    source 7459b9ecb54a298f02d19089620149718f8d8d48

https://gerrit.libreoffice.org/plugins/gitiles/core/+/7459b9ecb54a298f02d19089620149718f8d8d48%5E!/

commit 7459b9ecb54a298f02d19089620149718f8d8d48	[log]
author	Vasily Melenchuk <vasily.melenchuk@cib.de>	Mon Apr 13 11:06:29 2020 +0300
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	Mon Apr 27 22:36:12 2020 +0200
tree 8e26f751e26b4e4f7ca53d36d6c94603d096650c
parent 4ba179eb9208185406207522e39626327c7d74c3 [diff]

tdf#116883: sw: support for lists level format string

Vasily Melenchuk is already in CC.
Comment 7 Commit Notification 2020-05-11 08:42:55 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/598ca431de96d8bfcf18fa2945e9e30f98387474

tdf#132766: DOCX export: always try to set bullet font for list

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2020-05-13 07:03:27 UTC
Created attachment 160742 [details]
The Word-saved file again saved by the fixed Writer master

Looks good in:

Version: 7.0.0.0.alpha1+ (x64)
Build ID: f9790da286f2d2fa47f1748f8cfa6172c6622ca3
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: Skia/Raster; VCL: win; 
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 9 Commit Notification 2020-05-14 19:53:59 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/ec43d70911736b821e527109fadb3537635091de

tdf#132766: DOCX export: always try to set bullet font for list

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.