tdf#132766: DOCX export: always try to set bullet font for list

There are some problems with bullet if we use MS Wingdigs bullets
and do not specify Symbol font for it. It shiuld be either UTF-8
or Symbol, but not mixture of both.

Change-Id: Ie4a6f7e8fee6cfab21a18fc080f33d1bff455dd9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93846
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94158